<resources>
    <string name="app_name">Just Park Test</string>
    <string name="bookingsTitle">My Bookings</string>
    <string name="title">Title: </string>
    <string name="type">Type:</string>
    <string name="payment">Payment:</string>
    <string name="cardNumber">XXXX-XXXX-XXXX-XXXX</string>
    <string name="payment_details">Payment Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="address">Address</string>
    <string name="loading">Loading...</string>
    <string name="vehicleRegistration">Registration: </string>
    <string name="vehicleMake">Make: </string>
    <string name="vehicleModel">Model:</string>
    <string name="houseNumber">House Number: </string>
    <string name="addressFirstLine">Address First Line: </string>
    <string name="city">City: </string>
    <string name="postcode">Postcode: </string>
    <string name="notAvailable">Not Available</string>
    <string name="price">Price</string>
</resources>