<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            >

            <TextView android:id="@+id/titleDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="@id/titleDesc"
                app:layout_constraintTop_toTopOf="@id/titleDesc"
                app:layout_constraintBottom_toBottomOf="@id/titleDesc"/>

            <TextView android:id="@+id/typeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleDesc"
                android:text="@string/type"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="@id/typeDesc"
                app:layout_constraintTop_toTopOf="@id/typeDesc"
                app:layout_constraintBottom_toBottomOf="@id/typeDesc"/>

            <TextView
                android:id="@+id/paymentDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type"
                android:textStyle="bold"
                android:text="@string/payment"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cardImage"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paymentDesc"
                android:src="@drawable/unknown_card"/>

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="@id/cardImage"
                app:layout_constraintTop_toTopOf="@id/cardImage"
                app:layout_constraintBottom_toBottomOf="@id/cardImage"
                android:text="@string/cardNumber"/>

            <TextView
                android:id="@+id/priceDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardImage"
                android:textStyle="bold"
                android:text="@string/price"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="@id/priceDesc"
                app:layout_constraintTop_toTopOf="@id/priceDesc"
                app:layout_constraintBottom_toBottomOf="@id/priceDesc"
                android:textColor="@color/jpGreen"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

